--- a/index.html
+++ b/index.html
@@ -5,14 +5,19 @@
     <link rel="stylesheet" type="text/css" href="main.css">
   </head>
   <body>
+    <!-- Convert the ul in the navigation element into a series of horizontal links with # as the href value, without bullets, and have some space between them horizontally. -->
     <header id="main-header">
       <nav>
         <ul>
           <li>
-            <a href="#" id="home">Home</a>
+            <a href="home.html" id="home">Home</a>
           </li>
-          <li>Profile</li>
-          <li>Blog</li>
+          <li>
+            <a href="profile.html" id="profile">Profile</a>
+          </li>
+          <li>
+            <a href="blog.html" id="blog">Blog</a>
+          </li>
         </ul>
       </nav>
     </header>
