--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <!-- Convert the ul in the navigation element into a series of horizontal links with # as the href value, without bullets, and have some space between them horizontally. -->
     <header id="main-header">
-      <nav>
+      <nav id="main-nav">
         <ul>
           <li>
             <a href="home.html" id="home">Home</a>
