--- a/index.html
+++ b/index.html
@@ -21,21 +21,22 @@
         </ul>
       </nav>
     </header>
+    <article>
 
-    <section>
-      <div class="month-list">
-        <ul>
-          <li>
-            <a href="#">January</a>
-            <span class="disabled">My favorite month</span>
-          </li>
-          <li>
-            <a href="#">
-              <span class="active">February</span>
-            </a>
-          </li>
-          <li>
-            <a href="#">
+      <section>
+        <div class="month-list">
+          <ul>
+            <li>
+              <a href="#">January</a>
+              <span class="disabled">My favorite month</span>
+            </li>
+            <li>
+              <a href="#">
+                <span class="active">February</span>
+              </a>
+            </li>
+            <li>
+              <a href="#">
                 <span class="disabled">March</span>
               </a>
             </li>
@@ -72,7 +73,7 @@
             <h4>Child of parent</h4>
             <div>
               <div>I'm red!</div>
-              <h4>I'm red's sister
+              <h4>I'm red's sister</h4>
               <div>I'm blue!</div>
               <h4>I'm blue's brother</h4>
             </div>
@@ -81,29 +82,32 @@
         </div>
       </section>
 
-      <footer class="padded">
+    </article>
 
-        <div class="disclaimer">
-          Only one purchase per household.
-          <a href="#">
-            <span class="footer-link">
-              <span class="disabled">
-                Privacy Policy
-              </span>
+    <footer class="padded">
+
+      <div class="disclaimer">
+        Only one purchase per household.
+        <a href="#">
+          <span class="footer-link">
+            <span class="disabled">
+              Privacy Policy
             </span>
-        </div>
+          </span>
+        </a>
+      </div>
 
-        <div class="promo">
-          Purchase a book today and receive the eBook for free!
-        </div>
+      <div class="promo">
+        Purchase a book today and receive the eBook for free!
+      </div>
 
-        <span>
-            <input type="text" name="email" placeholder="Enter your email address">
-            <input type="text" name="name" placeholder="Enter your name">
-            <input type="tel" name="telephone" placeholder="Enter your telephone number">
-        </span>
+      <span>
+          <input type="text" name="email" placeholder="Enter your email address">
+          <input type="text" name="name" placeholder="Enter your name">
+          <input type="tel" name="telephone" placeholder="Enter your telephone number">
+      </span>
 
-      </footer>
+    </footer>
 
   </body>
 </html>
