--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
           <div class="parent">
             <h4>Child of parent</h4>
             <div>
-              <div>I'm red!</div>
+              <div id="iam-red">I'm red!</div>
               <h4>I'm red's sister</h4>
-              <div>I'm blue!</div>
+              <div id="iam-blue">I'm blue!</div>
               <h4>I'm blue's brother</h4>
             </div>
           </div>
